--- a/biblatex.cfg
+++ b/biblatex.cfg
@@ -56,6 +56,21 @@
     \newline
 }
 
+% Neue Anordnung der Working-Quellen im Literaturverzeichnis
+\DeclareBibliographyDriver{unpublished}{%
+    \usebibmacro{begentry}%
+    \printnames{author}%
+    \setunit{\addcolon\space}
+    \printfield{title}%
+    \setunit{\adddot\space}
+    \printfield{series}%
+    \setunit{\adddot\space}
+    \printfield{address}
+    \setunit{\space}
+    \printfield{year}%
+    \newline
+}
+
 % Neue Anordnung der Misc.Quellen im Literaturverzeichnis
 \DeclareBibliographyDriver{misc}{%
     \usebibmacro{begentry}%
