--- a/biblatex.cfg
+++ b/biblatex.cfg
@@ -65,6 +65,19 @@
     \setunit{\adddot\space}
     \printfield{series}%
     \setunit{\adddot\space}
+    \printfield{year}%
+    \newline
+}
+
+% Neue Anordnung der PhD-Quellen im Literaturverzeichnis
+\DeclareBibliographyDriver{phdthesis}{%
+    \usebibmacro{begentry}%
+    \printnames{author}%
+    \setunit{\addcolon\space}
+    \printfield{title}%
+    \setunit{\adddot\space}
+    \printfield{series}%
+    \setunit{\adddot\space}
     \printfield{address}
     \setunit{\space}
     \printfield{year}%
@@ -82,7 +95,7 @@
     \printfield{url}%
     \printtext{,}
     %\linebreak
-    \printtext{Abruf am }
+    \printtext{visited on}
     \printurldate
     \newline
 }
