Erste Überarbeitungen nach Feedback von Tobias

--- a/biblatex.cfg
+++ b/biblatex.cfg
@@ -46,10 +46,10 @@
     \printtext{In: }\printfield{journaltitle}\printtext{.}
     \iffieldundef{number}
     {}
-    {\printtext{Nr. }\printfield{number}\printtext{\addcomma\addspace}}%
+    {\printtext{No. }\printfield{number}\printtext{\addcomma\addspace}}%
     \iffieldundef{volume}
     {}
-    {\printtext{Jg. }\printfield{volume}\printtext{\addcomma\addspace}}%
+    {\printtext{Vol. }\printfield{volume}\printtext{\addcomma\addspace}}%
     \printfield{year}%
     \printtext{, }
     \printfield{pages}
