--- a/biblatex.cfg
+++ b/biblatex.cfg
@@ -49,6 +49,52 @@
     \newline
 }
 
+
+\DeclareBibliographyDriver{inproceedings}{%
+    \usebibmacro{begentry}%
+    \printnames{author}%
+    \iffieldundef{year}
+    {}
+    {\addspace\printtext{(}\printfield{year}\printtext{)}
+    }
+    \addcolon\space
+    \printfield{title}\adddot\space
+    \iffieldundef{journaltitle}
+    {\iffieldundef{booktitle} 
+        {}
+        {\printtext{In: }\printfield{booktitle}\adddot
+        }
+    }
+    {
+        \printtext{In: }\printfield{journaltitle}\adddot
+    }
+    \iffieldundef{number}
+    {}
+    {\printtext{No. }\printfield{number}\printtext{\addcomma\addspace}
+    }
+    \iffieldundef{volume}
+    {}
+    {\printtext{Vol. }\printfield{volume}\printtext{\addcomma\addspace}
+    }
+    \iffieldundef{venue}
+    {}
+    {\printfield{venue}\addcomma\addspace
+    }
+    \iffieldundef{pages}
+    {}
+    {\printfield{pages}
+    }
+    \iffieldundef{url}
+    {}
+    {
+        \adddot\addspace
+        %\linebreak
+        \printfield{url}%
+        \printurldate
+    }
+    \newline
+}
+
 % Neue Anordnung der Working-Quellen im Literaturverzeichnis
 \DeclareBibliographyDriver{unpublished}{%
     \usebibmacro{begentry}%
